--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/usr/bin/env bash
 
 install_file_dir=$( cd "$( dirname "${BASH_SOURCE[0]:-$0}" )" && pwd )
 source "$install_file_dir/commons"
